# mayuri-bot

./: .env.prod  README.md  bot.py  pyproject.toml  requirements.txt
config/: chatgpt_api_key.yml
data/: lolicon.db  setu_config.json
data/draw_card/: azur.json  ba.json  fgo_card.json  genshin.json  genshin_arms.json  guardian.json  guardian_arms.json  onmyoji.json  pcr.json  pretty.json  pretty_card.json  prts.json
data/draw_card/draw_card_up/: azur_up_char.json  genshin_up_char.json  guardian_up_char.json  prts_up_char.json
go/: config.yml  device.json  session.token
go/data/images/: 000202.ldb  000204.ldb  000206.ldb  LOG  MANIFEST-000006
go/data/leveldb-v3/: 000005.ldb  000129.ldb  LOG  MANIFEST-000007
go/data/videos/: 000007.ldb  LOG  MANIFEST-000005
